Added a generic score card to the default asset pack.

--- a/assets/TabletopClub/templates/config.cfg
+++ b/assets/TabletopClub/templates/config.cfg
@@ -1,3 +1,110 @@
 [Blank Page.txt]
 
 desc = "There's nothing here..."
+
+[Score Card.svg]
+
+desc = "A generic score card for up to 10 players."
+author = "Benjamin 'drwhut' Beddows"
+license = "CC0"
+
+textboxes = {
+	"name0": { "x": 68, "y": 104, "w": 190, "h": 53 },
+	"name1": { "x": 68, "y": 163, "w": 190, "h": 53 },
+	"name2": { "x": 68, "y": 222, "w": 190, "h": 53 },
+	"name3": { "x": 68, "y": 281, "w": 190, "h": 53 },
+	"name4": { "x": 68, "y": 340, "w": 190, "h": 53 },
+	"name5": { "x": 68, "y": 399, "w": 190, "h": 53 },
+	"name6": { "x": 68, "y": 458, "w": 190, "h": 53 },
+	"name7": { "x": 68, "y": 517, "w": 190, "h": 53 },
+	"name8": { "x": 68, "y": 576, "w": 190, "h": 53 },
+	"name9": { "x": 68, "y": 635, "w": 190, "h": 53 },
+	
+	"col0": { "x": 269, "y": 53, "w": 100, "h": 45 },
+	"col1": { "x": 382, "y": 53, "w": 100, "h": 45 },
+	"col2": { "x": 495, "y": 53, "w": 100, "h": 45 },
+	"col3": { "x": 608, "y": 53, "w": 100, "h": 45 },
+	"col4": { "x": 721, "y": 53, "w": 100, "h": 45 },
+	"col5": { "x": 834, "y": 53, "w": 100, "h": 45 },
+	"col6": { "x": 947, "y": 53, "w": 100, "h": 45 },
+	
+	"c00": { "x": 284, "y": 105, "w": 70, "h": 50 },
+	"c01": { "x": 396, "y": 105, "w": 70, "h": 50 },
+	"c02": { "x": 508, "y": 105, "w": 70, "h": 50 },
+	"c03": { "x": 620, "y": 105, "w": 70, "h": 50 },
+	"c04": { "x": 732, "y": 105, "w": 70, "h": 50 },
+	"c05": { "x": 844, "y": 105, "w": 70, "h": 50 },
+	"c06": { "x": 956, "y": 105, "w": 70, "h": 50 },
+	
+	"c10": { "x": 284, "y": 164, "w": 70, "h": 50 },
+	"c11": { "x": 396, "y": 164, "w": 70, "h": 50 },
+	"c12": { "x": 508, "y": 164, "w": 70, "h": 50 },
+	"c13": { "x": 620, "y": 164, "w": 70, "h": 50 },
+	"c14": { "x": 732, "y": 164, "w": 70, "h": 50 },
+	"c15": { "x": 844, "y": 164, "w": 70, "h": 50 },
+	"c16": { "x": 956, "y": 164, "w": 70, "h": 50 },
+	
+	"c20": { "x": 284, "y": 223, "w": 70, "h": 50 },
+	"c21": { "x": 396, "y": 223, "w": 70, "h": 50 },
+	"c22": { "x": 508, "y": 223, "w": 70, "h": 50 },
+	"c23": { "x": 620, "y": 223, "w": 70, "h": 50 },
+	"c24": { "x": 732, "y": 223, "w": 70, "h": 50 },
+	"c25": { "x": 844, "y": 223, "w": 70, "h": 50 },
+	"c26": { "x": 956, "y": 223, "w": 70, "h": 50 },
+	
+	"c30": { "x": 284, "y": 282, "w": 70, "h": 50 },
+	"c31": { "x": 396, "y": 282, "w": 70, "h": 50 },
+	"c32": { "x": 508, "y": 282, "w": 70, "h": 50 },
+	"c33": { "x": 620, "y": 282, "w": 70, "h": 50 },
+	"c34": { "x": 732, "y": 282, "w": 70, "h": 50 },
+	"c35": { "x": 844, "y": 282, "w": 70, "h": 50 },
+	"c36": { "x": 956, "y": 282, "w": 70, "h": 50 },
+	
+	"c40": { "x": 284, "y": 341, "w": 70, "h": 50 },
+	"c41": { "x": 396, "y": 341, "w": 70, "h": 50 },
+	"c42": { "x": 508, "y": 341, "w": 70, "h": 50 },
+	"c43": { "x": 620, "y": 341, "w": 70, "h": 50 },
+	"c44": { "x": 732, "y": 341, "w": 70, "h": 50 },
+	"c45": { "x": 844, "y": 341, "w": 70, "h": 50 },
+	"c46": { "x": 956, "y": 341, "w": 70, "h": 50 },
+	
+	"c50": { "x": 284, "y": 400, "w": 70, "h": 50 },
+	"c51": { "x": 396, "y": 400, "w": 70, "h": 50 },
+	"c52": { "x": 508, "y": 400, "w": 70, "h": 50 },
+	"c53": { "x": 620, "y": 400, "w": 70, "h": 50 },
+	"c54": { "x": 732, "y": 400, "w": 70, "h": 50 },
+	"c55": { "x": 844, "y": 400, "w": 70, "h": 50 },
+	"c56": { "x": 956, "y": 400, "w": 70, "h": 50 },
+	
+	"c60": { "x": 284, "y": 459, "w": 70, "h": 50 },
+	"c61": { "x": 396, "y": 459, "w": 70, "h": 50 },
+	"c62": { "x": 508, "y": 459, "w": 70, "h": 50 },
+	"c63": { "x": 620, "y": 459, "w": 70, "h": 50 },
+	"c64": { "x": 732, "y": 459, "w": 70, "h": 50 },
+	"c65": { "x": 844, "y": 459, "w": 70, "h": 50 },
+	"c66": { "x": 956, "y": 459, "w": 70, "h": 50 },
+	
+	"c70": { "x": 284, "y": 518, "w": 70, "h": 50 },
+	"c71": { "x": 396, "y": 518, "w": 70, "h": 50 },
+	"c72": { "x": 508, "y": 518, "w": 70, "h": 50 },
+	"c73": { "x": 620, "y": 518, "w": 70, "h": 50 },
+	"c74": { "x": 732, "y": 518, "w": 70, "h": 50 },
+	"c75": { "x": 844, "y": 518, "w": 70, "h": 50 },
+	"c76": { "x": 956, "y": 518, "w": 70, "h": 50 },
+	
+	"c80": { "x": 284, "y": 577, "w": 70, "h": 50 },
+	"c81": { "x": 396, "y": 577, "w": 70, "h": 50 },
+	"c82": { "x": 508, "y": 577, "w": 70, "h": 50 },
+	"c83": { "x": 620, "y": 577, "w": 70, "h": 50 },
+	"c84": { "x": 732, "y": 577, "w": 70, "h": 50 },
+	"c85": { "x": 844, "y": 577, "w": 70, "h": 50 },
+	"c86": { "x": 956, "y": 577, "w": 70, "h": 50 },
+	
+	"c90": { "x": 284, "y": 636, "w": 70, "h": 50 },
+	"c91": { "x": 396, "y": 636, "w": 70, "h": 50 },
+	"c92": { "x": 508, "y": 636, "w": 70, "h": 50 },
+	"c93": { "x": 620, "y": 636, "w": 70, "h": 50 },
+	"c94": { "x": 732, "y": 636, "w": 70, "h": 50 },
+	"c95": { "x": 844, "y": 636, "w": 70, "h": 50 },
+	"c96": { "x": 956, "y": 636, "w": 70, "h": 50 },
+}
