Added Seer, Villager, Werewolf cards to the default asset pack.

--- a/assets/TabletopClub/cards/config.cfg
+++ b/assets/TabletopClub/cards/config.cfg
@@ -18,11 +18,67 @@ back_face = "Back.png"
 
 main_menu = true
 
+[ww_*]
+
+author = "
+Icon: Lorc
+Font: Typodermic Fonts
+Back: Lorc"
+
+license = "
+Icon: CC-BY 3.0
+Font: CC0
+Back: CC-BY 3.0"
+
+modified_by = "Benjamin 'drwhut' Beddows"
+
+back_face = "ww_back.svg"
+
+[ww_seer.svg]
+
+name = "Seer"
+desc = "Helps villagers by secretly inspecting someone's role every night."
+
+url = "
+Icon: https://game-icons.net/1x1/lorc/crystal-ball.html
+Font: https://typodermicfonts.com/public-domain/
+Back: https://game-icons.net/1x1/lorc/wolf-howl.html"
+
+[ww_villager.svg]
+
+name = "Villager"
+desc = "Avoid being eaten by werewolves at night by voting against them during the day."
+
+; Different author to the other WW cards.
+author = "
+Icon: Delapouite
+Font: Typodermic Fonts
+Back: Lorc"
+
+url = "
+Icon: https://game-icons.net/1x1/delapouite/farmer.html
+Font: https://typodermicfonts.com/public-domain/
+Back: https://game-icons.net/1x1/lorc/wolf-howl.html"
+
+[ww_werewolf.svg]
+
+name = "Werewolf"
+desc = "Decide who to feast upon every night with your pack, avoid suspision from villagers."
+
+url = "
+Icon: https://game-icons.net/1x1/lorc/werewolf.html
+Font: https://typodermicfonts.com/public-domain/
+Back: https://game-icons.net/1x1/lorc/wolf-howl.html"
+
 [Back.png]
 
 ignore = true
 
 [Template*]
+
+ignore = true
+
+[ww_back.svg]
 
 ignore = true
 
