Added dominoes to the default asset pack.

--- a/assets/TabletopClub/games/config.cfg
+++ b/assets/TabletopClub/games/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "Standard Chess for two players."
 
+[Dominoes.tc]
+
+desc = "A bag with 28 tiles has been provided."
+
 [Poker.tc]
 
 desc = "Each player has been given 25 chips, which sum up to a value of 500."
