--- a/assets/TabletopClub/tokens/cube/config.cfg
+++ b/assets/TabletopClub/tokens/cube/config.cfg
@@ -1,4 +1,16 @@
-[*]
+[Domino*]
+
+author = "Benjamin 'drwhut' Beddows"
+license = "CC0"
+
+mass = 15
+scale = Vector3(2.4, 0.75, 4.8)
+
+main_menu = true
+
+[White.bmp]
+
+desc = "A white token."
 
 author = "elmodor"
 license= "CC0"
@@ -8,9 +20,6 @@ mass = 0.1
 scale = Vector3(1.5, 0.2, 1.5)
 
 main_menu = false
-
-[White.bmp]
-desc = "A white token."
 
 [Red]
 parent = "White"
