Added Go to the default asset pack.
- boards/Go Board (Large) -> 19x19
- boards/Go Board (Small) -> 13x13, 9x9
- containers/Pot
- games/Go
- pieces/Stone Black
- pieces/Stone White

--- a/assets/TabletopClub/boards/config.cfg
+++ b/assets/TabletopClub/boards/config.cfg
@@ -10,3 +10,21 @@ mass = 900.0
 scale = Vector3(4.0, 4.0, 4.0)
 sfx = "wood_heavy"
 main_menu = false
+
+[Go Board*]
+
+author = "Benjamin 'drwhut' Beddows"
+license = "CC0"
+
+mass = 900.0
+sfx = "wood_heavy"
+main_menu = false
+
+[Go Board (Large).obj]
+
+desc = "A 19x19 Goban."
+scale = Vector3(1.0, 0.6, 1.0)
+
+[Go Board (Small).obj]
+
+desc = "A 13x13 and 9x9 Goban."
