--- a/assets/TabletopClub/containers/config.cfg
+++ b/assets/TabletopClub/containers/config.cfg
@@ -1,3 +1,16 @@
+[Pot.obj]
+
+author = "Fabio S. Clemente"
+license = "CC0"
+modified_by = "Benjamin 'drwhut' Beddows"
+url = "https://opengameart.org/content/stylized-vases-and-pots"
+
+mass = 400.0
+scale = Vector3(12.8, 12.8, 12.8)
+sfx = "metal_heavy"
+shakable = true
+main_menu = true
+
 [Purse.gltf]
 
 author = "yd"
