--- a/assets/TabletopClub/pieces/config.cfg
+++ b/assets/TabletopClub/pieces/config.cfg
@@ -23,7 +23,11 @@ author = "rehcub"
 license = "CC0"
 url = "https://opengameart.org/content/chess-set-1"
 
-; Create black versions of all of the chess pieces.
+[Stone*]
+author = "Benjamin 'drwhut' Beddows"
+license = "CC0"
+
+; Create black versions of all of the pieces.
 [Bishop Black]
 parent = "Bishop White"
 color = "#000000"
@@ -46,6 +50,10 @@ color = "#000000"
 
 [Rook Black]
 parent = "Rook White"
+color = "#000000"
+
+[Stone Black]
+parent = "Stone White"
 color = "#000000"
 
 [*]
