--- a/assets/TabletopClub/games/config.cfg
+++ b/assets/TabletopClub/games/config.cfg
@@ -6,6 +6,11 @@ desc = "Standard Chess for two players."
 
 desc = "A bag with 28 tiles has been provided."
 
+[Go.tc]
+
+desc = "Standard Go for two players.
+Can play on a 19x19, 13x13, or 9x9 board."
+
 [Poker.tc]
 
 desc = "Each player has been given 25 chips, which sum up to a value of 500."
