--- a/misc/flatpak/io.itch.drwhut.TabletopClub.desktop
+++ b/misc/flatpak/io.itch.drwhut.TabletopClub.desktop
@@ -7,5 +7,5 @@ Comment=Play tabletop games in a physics-based 3D sandbox
 Categories=Game;BoardGame;
 
 Icon=io.itch.drwhut.TabletopClub
-Exec=tabletop-club --main-pack /app/share/TabletopClub/TabletopClub.pck --base-asset-dir /app/share/TabletopClub
+Exec=tabletop-club-wrapper
 Terminal=false
