Fix missing escape characters

--- a/assets/TabletopClub/music/config.cfg
+++ b/assets/TabletopClub/music/config.cfg
@@ -35,7 +35,7 @@ desc = "A piece of music from a more elegant time, 1940. This is a beautiful slo
 url = "https://filmmusic.io/song/3906-in-your-arms"
 
 [Lobby Time - Kevin MacLeod.ogg]
-desc = "Welcome to the lobby of the FUTURE! Luxurious automatic ashtrays, and modern green vinyl furnishings set off the shag carpeted walls. Enjoy a Rusty Nail from our cheerful bar staff (with a complimentary cheese and fruit plate before 5pm). We feature prime rib dinners every day that ends in a "y"! Remember to tip the bellhops at least 5 cents per bag. Enjoy your stay! This was written 2 years before it was published, because I didn't have a good enough upright bass sample to make it go."
+desc = "Welcome to the lobby of the FUTURE! Luxurious automatic ashtrays, and modern green vinyl furnishings set off the shag carpeted walls. Enjoy a Rusty Nail from our cheerful bar staff (with a complimentary cheese and fruit plate before 5pm). We feature prime rib dinners every day that ends in a \"y\"! Remember to tip the bellhops at least 5 cents per bag. Enjoy your stay! This was written 2 years before it was published, because I didn't have a good enough upright bass sample to make it go."
 url = "https://filmmusic.io/song/3986-lobby-time"
 
 [Night on the Docks - Sax - Kevin MacLeod.ogg]
