Now test each function in AssetPackCatalog individually.
- Re-implemented the 'ignore' and 'back_face' properties.

- Fixed using the wrong comment symbol in the test config.cfg files.

--- a/game/tests/test_pack/cards/config.cfg
+++ b/game/tests/test_pack/cards/config.cfg
@@ -19,7 +19,7 @@ parent = "Card 1"
 suit = "hey"
 value = 2
 
-sfx = "glass" # Should not be used.
+sfx = "glass" ; Should not be used.
 
 [Card 3]
 parent = "Card 1"
@@ -30,9 +30,13 @@ value = 3
 back_face = "test_card.png"
 
 [Card 4]
-parent = "Card 2" # Based on another child entry.
+parent = "Card 2" ; Based on another child entry.
 
 scale = Vector2(5.0, 8.0)
 value = 4
 
-sfx = "glass_light" # Should not be used.
+sfx = "glass_light" ; Should not be used.
+
+[Card 5]
+parent = "Card 3"
+ignore = true
