--- a/game/tests/test_pack/dice/d12/config.cfg
+++ b/game/tests/test_pack/dice/d12/config.cfg
@@ -1,6 +1,6 @@
 [*]
 
-# None of these values should be accepted.
+; None of these values should be accepted.
 face_values = {
     1: 2,
     "left": 3,
