--- a/game/tests/test_pack/dice/d20/config.cfg
+++ b/game/tests/test_pack/dice/d20/config.cfg
@@ -1,6 +1,6 @@
 [*]
 
-# Wrong number of faces, a warning will be given, but should still be used.
+; Wrong number of faces, a warning will be given, but should still be used.
 face_values = {
     Vector2(0.0, 0.0): "hi"
 }
