--- a/game/tests/test_pack/dice/d6/config.cfg
+++ b/game/tests/test_pack/dice/d6/config.cfg
@@ -1,6 +1,6 @@
 [*]
 
-# This die uses normal vectors to define its faces.
+; This die uses normal vectors to define its faces.
 face_values = {
     Vector3(1.0, 0.0, 0.0): 1,
     Vector3(0.0, 1.0, 0.0): 2,
