--- a/game/tests/test_pack/pieces/config.cfg
+++ b/game/tests/test_pack/pieces/config.cfg
@@ -11,7 +11,7 @@ sfx = "metal"
 
 [red*]
 
-scale = Vector3(2.0, 1.0, 2.0) # Should not be used, shorter section name.
+scale = Vector3(2.0, 1.0, 2.0) ; Should not be used, shorter section name.
 color = "ff0000"
 
 [blue_piece]
