--- a/game/tests/test_pack/templates/config.cfg
+++ b/game/tests/test_pack/templates/config.cfg
@@ -1,7 +1,7 @@
 [test_template.png]
 
 textboxes = [
-    {}, # Default values.
+    {}, ; Default values.
     { "x": 10, "y": 10, "w": 200, "h": 200, "lines": 5 },
     { "x": -20, "y": -40, "w": 0, "h": 0, "text": "urm...
 ... this is awkward." }, # Invalid rectangle.
@@ -11,8 +11,8 @@ textboxes = [
 
 [old_template.png]
 
-# This template uses the old 'textboxes' dictionary format, where the keys were
-# the IDs of the textboxes.
+; This template uses the old 'textboxes' dictionary format, where the keys were
+; the IDs of the textboxes.
 textboxes = {
     "blank": {},
     "filled": { "x": 200, "y": 100, "w": 100, "h": 20, "rot": 180 }
