--- a/game/tests/test_pack/timers/config.cfg
+++ b/game/tests/test_pack/timers/config.cfg
@@ -5,11 +5,11 @@ sfx = "metal_light"
 
 [New Timer]
 parent = "Test Timer"
-name = "New New Timer" # Should be the name used.
+name = "New New Timer" ; Should be the name used.
 
 sfx = "generic"
 
 [Timer?]
-parent = "test_timer" # Does not exist, should not be created.
+parent = "test_timer" ; Does not exist, should not be created.
 
 sfx = "metal_heavy"
