--- a/game/tests/test_pack/cards/stacks.cfg
+++ b/game/tests/test_pack/cards/stacks.cfg
@@ -7,6 +7,6 @@ items = [
     "Card 1",
     "Card 2",
     "Card 3",
-    "Card 4", # Should not be accepted, as it is a different size.
-    "Card 5", # Should not be accepted, does not exist.
+    "Card 4", ; Should not be accepted, as it is a different size.
+    "Card 5", ; Should not be accepted, does not exist.
 ]
