--- a/game/tests/test_pack/dice/d8/config.cfg
+++ b/game/tests/test_pack/dice/d8/config.cfg
@@ -1,6 +1,6 @@
 [*]
 
-# This die uses the old 'face_values' format used in v0.1.x
+; This die uses the old 'face_values' format used in v0.1.x
 face_values = {
     1: Vector2(0.0, 0.0),
     2: Vector2(0.0, 90.0),
@@ -9,5 +9,5 @@ face_values = {
     5.5: Vector2(-90.0, 0.0),
     "six": Vector2(180.0, 0.0),
     "seven": Vector2(0.0, 180.0),
-    "8": Vector2(720.0, 0.0), # Should be accepted as Vector3.UP
+    "8": Vector2(720.0, 0.0), ; Should be accepted as Vector3.UP
 }
