--- a/game/tests/test_pack/tables/config.cfg
+++ b/game/tests/test_pack/tables/config.cfg
@@ -4,10 +4,10 @@ name = "Gaming Table"
 desc = "... what if a table had RBG lighting like a PC? Hmm..."
 
 hands = [
-    {}, # Default position and rotation.
+    {}, ; Default position and rotation.
     { "pos": Vector3(0.0, 0.0, -50.0) },
     { "dir": 90.0 },
     { "pos": Vector3(0.0, 10.0, 100.0), "dir": 180.0 }
 ]
 
-paint_plane = Vector2(-50.0, 100.0) # The -50 should be converted to 50.
+paint_plane = Vector2(-50.0, 100.0) ; The -50 should be converted to 50.
