--- a/game/tests/test_pack/tokens/cube/config.cfg
+++ b/game/tests/test_pack/tokens/cube/config.cfg
@@ -5,12 +5,12 @@ name = "Test Cube"
 suit = "T"
 value = 5
 
-sfx = "tin" # Should not be used.
+sfx = "tin" ; Should not be used.
 
 [Test Cube 2]
 parent = "Test Cube"
 
-# Wrong data types.
+; Wrong data types.
 bounce = "1.0"
 color = Vector3(0.0, 1.0, 0.0)
 mass = false
