Now test if the entirety of tests/test_pack is imported correctly.

--- a/game/tests/test_pack/dice/d10/config.cfg
+++ b/game/tests/test_pack/dice/d10/config.cfg
@@ -2,13 +2,13 @@
 
 face_values = {
     Vector2(0.0, 0.0): "",
-    Vector2(90.0, 0.0): "two?"
+    Vector2(90.0, 0.0): "two?",
     Vector3(1.0, 0.0, 0.0): 3,
     4.0: Vector2(-90.0, 0.0),
     "5": Vector2(0.0, -90.0),
     Vector2(180.0, 0.0): 6,
-    Vector2(0.0, 0.0): "6+1",
-    Vector2(90.0, 0.0): "ate"
-    Vector3(1.0, 0.0, 0.0): 9,
+    Vector2(270.0, 0.0): "6+1",
+    Vector2(0.0, -90.0): "ate",
+    Vector3(0.0, -1.0, 0.0): 9,
     Vector2(360.0, 360.0): 10.5,
 }
