--- a/game/tests/test_pack/dice/d12/config.cfg
+++ b/game/tests/test_pack/dice/d12/config.cfg
@@ -1,13 +1,15 @@
 [*]
 
-; None of these values should be accepted.
 face_values = {
-    1: 2,
-    "left": 3,
-    "help": { 6: 9 },
+    ; Normals are valid, but values are not.
     Vector2(0.0, 0.0): Vector2(90.0, 0.0),
     Vector3(-1.0, 0.0, 0.0): Vector3(2.0, 1.0, 0.0),
     Vector3(0.0, -1.0, 0.0): [],
+
+    ; None of these should be accepted.
+    1: 2,
+    "left": 3,
+    "help": { 6: 9 },
     6: Vector3(0.0, 0.0, -1.0),
     Vector3(0.0, 0.0, 0.0): "How DARE you put a 0-length normal in MY test case???",
 }
