--- a/game/tests/test_pack/pieces/config.cfg
+++ b/game/tests/test_pack/pieces/config.cfg
@@ -16,7 +16,7 @@ color = "ff0000"
 
 [blue_piece]
 parent = "red_piece"
-color = "00f"
+color = "00f" ; Should not be used, needs to be six characters long.
 
 [another_red_piece]
 parent = "red_piece"
