--- a/game/tests/test_pack/templates/config.cfg
+++ b/game/tests/test_pack/templates/config.cfg
@@ -4,9 +4,9 @@ textboxes = [
     {}, ; Default values.
     { "x": 10, "y": 10, "w": 200, "h": 200, "lines": 5 },
     { "x": -20, "y": -40, "w": 0, "h": 0, "text": "urm...
-... this is awkward." }, # Invalid rectangle.
+... this is awkward." }, ; Invalid rectangle.
     { "x": 100, "y": 100, "w": 400, "h": 100, "rot": 90, "text": "hi" },
-    { "w": 1000, "h": 50, "lines": 100 }, # Over maximum number of lines.
+    { "w": 1000, "h": 50, "lines": 100 }, ; Over maximum number of lines.
 ]
 
 [old_template.png]
