--- a/game/tests/test_pack/timers/config.cfg
+++ b/game/tests/test_pack/timers/config.cfg
@@ -9,7 +9,10 @@ name = "New New Timer" ; Should be the name used.
 
 sfx = "generic"
 
-[Timer?]
+[Fake Timer]
 parent = "test_timer" ; Does not exist, should not be created.
 
 sfx = "metal_heavy"
+
+[Timer?] ; Invalid file name, will not be created.
+parent = "Test Timer"
