Accept Vector3 being used for card 'scale' property again.

--- a/game/tests/test_pack/cards/config.cfg
+++ b/game/tests/test_pack/cards/config.cfg
@@ -24,6 +24,8 @@ sfx = "glass" ; Should not be used.
 [Card 3]
 parent = "Card 1"
 
+scale = Vector3(6.0, 7.0, 8.0) ; Acceptable, but Y-scale should be ignored.
+
 suit = 7
 value = 3
 
